hphp/test/slow/case-types/recursion-1.php.expectf
Fatal error: resolving type alias C1 failed. Have you declared all classes in the type alias in %s on line 9
